--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sass-encodeuricomponent",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Sass version of Javascript encodeURIComponent function",
-  "main": "sass-encodeuricomponent.scss",
+  "main": "index.scss",
   "keywords": [
     "sass",
     "scss",
